// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TestComponent With Background 1`] = `
<div
  style={
    Object {
      "backgroundColor": "grey",
      "color": "black",
      "padding": "5px",
    }
  }
>
  <div>
    With background
  </div>
</div>
`;

exports[`Storyshots Components/TestComponent Without Background 1`] = `
<div
  style={
    Object {
      "backgroundColor": "transparent",
      "color": "black",
      "padding": "5px",
    }
  }
>
  <div>
    Without background
  </div>
</div>
`;
